--- a/backend/index.html
+++ b/backend/index.html
@@ -382,6 +382,7 @@ color: "blue"
 });
 </script>
 <!-- /End Survey.io code -->
+<script id="aptureScript" type="text/javascript" src="http://www.apture.com/js/apture.js?siteToken=B6cWD6D" charset="utf-8"></script>
 
         </body>
 </html>
