--- a/backend/index.html
+++ b/backend/index.html
@@ -13,9 +13,12 @@
 </script><script>utmx("url",'A/B');</script>
 --> 
 <!-- End of Google Website Optimizer Control Script -->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
         <head>
                 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+                <meta name="description" content="Instarigt Instapaper Firefox addon, realtime addon streaming, xmpp instapaper article updates, article recommendation" />
+                <meta name="keywords" content="Instaright, Instapaper firefox, Instapaper for firefox, instapaper import delicious, import delicious bookmarks, instapaper delicious, delicious importer, export delicious bookmarks to instapaper, instapaper addon for firefox, instapaper add-on firefox, instapaper add-on, social bookmark, read it later" />
                 <link rel="stylesheet" type="text/css" href="css/style.css" />
                 <script src="http://www.google.com/jsapi?key=AIzaSyDu78p4P0qEe3CTU4GssVBz_crZemld_eg" type="text/javascript" charset="utf-8"></script>
                 <!--script src='/_ah/channel/jsapi'></script-->
@@ -39,6 +42,14 @@
                          })();
                  </script>
                  <!-- Google Website Optimizer Tracking Script -->
+                 <!-- visibli bar -->
+                 <!-- end visibli bar -->
+<!-- 
+<script type="text/javascript" src="http://platform.visibli.com/js/jquery/jquery-1.3.2.min.js"></script>
+<script type="text/javascript" src="http://platform.visibli.com/js/adanywhere.js?apikey=05e8883aeea8d420&v=1&sharedomain=instaright.appspot.com&rootdomain=visibli.com"></script>
+-->
+                 <script type="text/javascript" src="http://platform.visibli.com/js/jquery/jquery-1.3.2.min.js"></script>
+                 <script type="text/javascript" src="http://platform.visibli.com/js/adanywhere.js?apikey=a947824b599193b3&amp;v=1&amp;sharedomain=links.visibli.com&amp;rootdomain=instaright.appspot.com"></script>
          </head>
          <body>
                  <script type="text/javascript" charset="utf-8">
@@ -118,7 +129,7 @@ function updateDisplayEntry(response, div) {
                                 title="Instaright article from domain "+domain;
                         } else {
                                 try{
-                                if (title.charCodeAt(0) > 256 && title.length >= 40){
+                                if ((title.charCodeAt(0) > 256 || title.charCodeAt(title.length/2) > 256)   && title.length >= 40){
                                         title = title.substr(0,37) + ' ...';
                                 }
                                 else if (title.length >= 70){
@@ -131,6 +142,7 @@ function updateDisplayEntry(response, div) {
                         dateUpdated = new Date(e['u']);
                         id = e['id'];
 			a = e['a'];
+                        original_url = e['ol'];
 
                         container = document.createElement('div');
                         containerAvatar = document.createElement('div');
@@ -146,14 +158,19 @@ function updateDisplayEntry(response, div) {
 
                         titleElement = document.createElement('a');
                         titleElement.innerHTML = title;
-                        titleElement.href = link;
+                        if (original_url === undefined){
+                                titleElement.href = link;
+                        } else{
+                                // visibli link
+                                titleElement.href ='http://links.visibli.com/a947824b599193b3/?web=058421&dst='+original_url;
+                        }
                         titleElement.target="_new"
                         titleParagraph = document.createElement('p');
                         titleParagraph.appendChild(titleElement);
 
                         domainElement = document.createElement('a');
                         domainElement.innerHTML = domain;
-                        domainElement.href = 'http://'+domain;
+                        domainElement.href = 'http://links.visibli.com/a947824b599193b3/?web=058421&dst='+'http://'+domain;
                         domainElement.target="_new"
 
                         container.appendChild(containerAvatar);
@@ -200,12 +217,15 @@ function send_invite(){
 
 <div id="header" class="container_24">
         <div style="text-align: right;">
+<!--iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FInstaright-Firefox-addon-for-Instapaper%2F105396136190038&amp;layout=button_count&amp;show_faces=true&amp;width=450&amp;action=like&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:21px;" allowTransparency="true"></iframe-->
                 <ul> 
                         {% if user %}
                         <li>Hi {{ user }}</li>
                         {% else %}
                         <li><a id="btn_login" href="{{ login_url }}" title="Login">introduce yourself</a></li>
                         {% endif %}
+                        <li>
+                        </li>
 
                 </ul>
         </div>
@@ -215,7 +235,7 @@ function send_invite(){
                 <div id="left_col" class="grid_18"> 
                         <div class="left_box_top"> 
                                 <h2 class="round_title"> 
-                                        <span>Instaright Hotlinks</span> 
+                                        <span>Instaright Stream</span> 
                                 </h2> 
                         </div> 
                         <div class="left_box_mid">
@@ -291,12 +311,29 @@ function send_invite(){
                         </div--> 
                         <!--div class="left_box_mid_close"></div-->
                         <div class="left_box_bot"> 
+                <div id="disqus_thread"></div>
+                <script type="text/javascript">
+                /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+                         var disqus_shortname = 'instaright'; // required: replace example with your forum shortname
+
+                         // The following are highly recommended additional parameters. Remove the slashes in front to use.
+                         var disqus_identifier = 'agppbnN0YXJpZ2h0chULEgxTZXNzaW9uTW9kZWwY_7fmAgw';
+                         var disqus_url = 'http://instaright.appspot.com';
+
+                         /* * * DON'T EDIT BELOW THIS LINE * * */
+                         (function() {
+                                 var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                                 dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+                                 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                         })();
+                </script>
+                <noscript>Please enable JavaScript to view the comments</noscript>
                         </div>
                 </div>
                 <div id="right_col" class="grid_6">
                         <div id="right_box_top">
                                 <p style="text-align: center;">Instaright Firefox addon</p>
-                                <p style="text-align: center;"><a title="Instapaper firefox addon" href="https://addons.mozilla.org/en-US/firefox/addon/13317/"><img src="static/images/install_now.png" style="width:220px; height: 60px;" alt="Instapaper firefox addon"/></a></p>
+                                <p style="text-align: center;"><a title="Instapaper firefox addon" href="http://instaright.appspot.com/article/agppbnN0YXJpZ2h0chULEgxTZXNzaW9uTW9kZWwY_7fmAgw"><img src="static/images/install_now.png" style="width:220px; height: 60px;" alt="Instapaper firefox addon"/></a></p>
                                 <p class="social_media">Realtime tracking</p>
                                 <div class="text-align: center; width: 270px;">
                                         Track domains on Instaright in realtime<br>
@@ -313,10 +350,10 @@ function send_invite(){
                         </div>
                         <div id="right_box_mid">
                                 <ul>
-                                        <li class="social_media"><img align="left" src="/static/images/twitter.png"/><a href="http://twitter.com/instaright">Twitter</a></li>
-                                        <li class="social_media"><img align="left" src="/static/images/facebook.png"/><a href="http://www.facebook.com/pages/Instaright-Firefox-addon-for-Instapapaer/105396136190038">Facebook Page</a></li>
-                                        <li class="social_media"><img align="left" src="/static/images/blog.png"/><a href="http://instaright.tumblr.com/">Blog</a></li>
-                                        <li class="social_media"><img align="left" src="/static/images/stats_2.png"/><a href="/stats">Stats</a></li>
+                                        <li class="social_media"><img align="left" src="/static/images/twitter.png" title="Instapaper tools on twitter"/><a href="http://twitter.com/instaright">Twitter</a></li>
+                                        <li class="social_media"><img align="left" src="/static/images/facebook.png" title="Instapaper tools on facebook"/><a href="http://www.facebook.com/pages/Instaright-Firefox-addon-for-Instapapaer/105396136190038">Facebook Page</a></li>
+                                        <li class="social_media"><img align="left" src="/static/images/blog.png" title="Instapaper tools blog"/><a href="http://instaright.tumblr.com/">Blog</a></li>
+                                        <li class="social_media"><img align="left" src="/static/images/arrow_right.png"/><a href="/tools/delicious" title="Import Delicious Bookmarks to Instapaper">Delicious Import to Instapaper</a></li>
                                 </ul>
                         </div>
                         <div id="right_box_bot">
@@ -326,7 +363,6 @@ function send_invite(){
 
                         </div>
                 </div>
-        </div>
         <div class="clear"></div> 
         <div class="push"></div> 
 </div>
@@ -335,7 +371,7 @@ function send_invite(){
 
 <div class="footer-container">
         <div style="position: relative; text-align: center; color: rgb(0, 0, 204); font-size: small;">
-                <p><a href="mailto:gbabun@gmail.com">contact</a> | <a href="http://twitter.com/bojanbabic">twitter</a> | <a href="http://bojanbabic.blogspot.com">blog</a></p>
+                <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://instaright.tumblr.com" title="instaright blog">blog</a></p>
         </div>
 </div>
 <!-- GETSATISFACTION -->
@@ -382,7 +418,11 @@ color: "blue"
 });
 </script>
 <!-- /End Survey.io code -->
-<script id="aptureScript" type="text/javascript" src="http://www.apture.com/js/apture.js?siteToken=B6cWD6D" charset="utf-8"></script>
+<!-- apture bar -->
+<script id="aptureScript">
+(function (){var a=document.createElement("script");a.defer="true";a.src="http://www.apture.com/js/apture.js?siteToken=B6cWD6D";document.getElementsByTagName("head")[0].appendChild(a);})();
+</script>
+<!-- end apture bar -->
 
         </body>
 </html>
