major bug updates and new badges

--- a/backend/index.html
+++ b/backend/index.html
@@ -369,9 +369,10 @@ function send_invite(){
 <div class="clearfix"></div> 
 </div>
 
+<div class="clearfix"></div> 
 <div class="footer-container">
         <div style="position: relative; text-align: center; color: rgb(0, 0, 204); font-size: small;">
-                <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://instaright.tumblr.com" title="instaright blog">blog</a></p>
+                <p><a href="mailto:gbabun@gmail.com" title="Contact Instaright developer">contact</a> | <a href="http://twitter.com/instaright" title="instaright on twitter">twitter</a> | <a href="http://instaright.tumblr.com" title="instaright blog">blog</a> | <a href="privacy_policy.html" title="Instaright Privacy Policy">Privacy Policy</a></p>
         </div>
 </div>
 <!-- GETSATISFACTION -->
