--- a/backend/index.html
+++ b/backend/index.html
@@ -43,13 +43,9 @@
                  </script>
                  <!-- Google Website Optimizer Tracking Script -->
                  <!-- visibli bar -->
+			<script type="text/javascript" src="http://platform.visibli.com/js/jquery/jquery-1.3.2.min.js"></script>
+			<script type="text/javascript" src="http://platform.visibli.com/js/adanywhere.js?apikey=a947824b599193b3&amp;v=1&amp;sharedomain=links.instaright.com&amp;rootdomain=instaright.com"></script>
                  <!-- end visibli bar -->
-<!-- 
-<script type="text/javascript" src="http://platform.visibli.com/js/jquery/jquery-1.3.2.min.js"></script>
-<script type="text/javascript" src="http://platform.visibli.com/js/adanywhere.js?apikey=05e8883aeea8d420&v=1&sharedomain=instaright.appspot.com&rootdomain=visibli.com"></script>
--->
-                 <script type="text/javascript" src="http://platform.visibli.com/js/jquery/jquery-1.3.2.min.js"></script>
-                 <script type="text/javascript" src="http://platform.visibli.com/js/adanywhere.js?apikey=a947824b599193b3&amp;v=1&amp;sharedomain=links.visibli.com&amp;rootdomain=instaright.appspot.com"></script>
          </head>
          <body>
                  <script type="text/javascript" charset="utf-8">
@@ -162,7 +158,7 @@ function updateDisplayEntry(response, div) {
                                 titleElement.href = link;
                         } else{
                                 // visibli link
-                                titleElement.href ='http://links.visibli.com/a947824b599193b3/?web=058421&dst='+original_url;
+                                titleElement.href ='http://links.instaright.com/a947824b599193b3/?web=058421&dst='+original_url;
                         }
                         titleElement.target="_new"
                         titleParagraph = document.createElement('p');
@@ -170,7 +166,7 @@ function updateDisplayEntry(response, div) {
 
                         domainElement = document.createElement('a');
                         domainElement.innerHTML = domain;
-                        domainElement.href = 'http://links.visibli.com/a947824b599193b3/?web=058421&dst='+'http://'+domain;
+                        domainElement.href = 'http://links.instaright.com/a947824b599193b3/?web=058421&dst='+'http://'+domain;
                         domainElement.target="_new"
 
                         container.appendChild(containerAvatar);
