twit times updated

--- a/backend/index.html
+++ b/backend/index.html
@@ -417,8 +417,9 @@ color: "blue"
 <!-- /End Survey.io code -->
 <!-- apture bar -->
 <script id="aptureScript">
-(function (){var a=document.createElement("script");a.defer="true";a.src="http://www.apture.com/js/apture.js?siteToken=B6cWD6D";document.getElementsByTagName("head")[0].appendChild(a);})();
+(function (){var a=document.createElement("script");a.defer="true";a.src="http://www.apture.com/js/apture.js?siteToken=7TzNhnW";document.getElementsByTagName("head")[0].appendChild(a);})();
 </script>
+
 <!-- end apture bar -->
 
         </body>
