--- a/backend/index.html
+++ b/backend/index.html
@@ -43,8 +43,8 @@
                  </script>
                  <!-- Google Website Optimizer Tracking Script -->
                  <!-- visibli bar -->
-			<script type="text/javascript" src="http://platform.visibli.com/js/jquery/jquery-1.3.2.min.js"></script>
-			<script type="text/javascript" src="http://platform.visibli.com/js/adanywhere.js?apikey=a947824b599193b3&amp;v=1&amp;sharedomain=links.instaright.com&amp;rootdomain=instaright.com"></script>
+			<!--script type="text/javascript" src="http://platform.visibli.com/js/jquery/jquery-1.3.2.min.js"></script>
+			<script type="text/javascript" src="http://platform.visibli.com/js/adanywhere.js?apikey=a947824b599193b3&amp;v=1&amp;sharedomain=links.instaright.com&amp;rootdomain=instaright.com"></script-->
                  <!-- end visibli bar -->
          </head>
          <body>
