--- a/backend/index.html
+++ b/backend/index.html
@@ -1,19 +1,4 @@
-<!-- Google Website Optimizer Control Script -->
-<!-- A/B testing 
-<script>
-        function utmx_section(){}function utmx(){}
-        (function(){var k='2188815013',d=document,l=d.location,c=d.cookie;function f(n){
-                        if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.indexOf(';',i);return c.substring(i+n.
-                                        length+1,j<0?c.length:j)}}}var x=f('__utmx'),xx=f('__utmxx'),h=l.hash;
-                d.write('<sc'+'ript src="'+
-                'http'+(l.protocol=='https:'?'s://ssl':'://www')+'.google-analytics.com'
-                +'/siteopt.js?v=1&utmxkey='+k+'&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='
-                +new Date().valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
-                '" type="text/javascript" charset="utf-8"></sc'+'ript>')})();
-</script><script>utmx("url",'A/B');</script>
---> 
-<!-- End of Google Website Optimizer Control Script -->
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
         <head>
                 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -26,6 +11,10 @@
                 <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
                 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
                 <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
+
+		<!-- fancybox -->
+		<script type="text/javascript" src="/static/javascript/jquery.fancybox-1.3.4.pack.js"></script>
+		<link rel="stylesheet" href="/css/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
                 <title>Instaright Realtime Stream</title>
 
                 <!-- google analytics -->
@@ -42,12 +31,32 @@
                          })();
                  </script>
                  <!-- Google Website Optimizer Tracking Script -->
-                 <!-- visibli bar -->
-			<!--script type="text/javascript" src="http://platform.visibli.com/js/jquery/jquery-1.3.2.min.js"></script>
-			<script type="text/javascript" src="http://platform.visibli.com/js/adanywhere.js?apikey=a947824b599193b3&amp;v=1&amp;sharedomain=links.instaright.com&amp;rootdomain=instaright.com"></script-->
-                 <!-- end visibli bar -->
          </head>
          <body>
+		<script type="text/javascript" charset="utf-8">
+		$(document).ready(function(){
+			$("#btn_login").fancybox({
+				'scrolling'		: 'no',
+				'titleShow'		: false,
+				'onClosed'		: function(){
+				}
+			});
+		});
+		</script>
+    <div id="fb-root"></div>
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({appId: '180962951948062', status: true, cookie: true,
+                 xfbml: true});
+      };
+      (function() {
+        var e = document.createElement('script');
+        e.type = 'text/javascript';
+        e.src = document.location.protocol + '//connect.facebook.net/en_US/all.js';
+        e.async = true;
+        document.getElementById('fb-root').appendChild(e);
+      }());
+    </script>
                  <script type="text/javascript" charset="utf-8">
                          if( !window.XMLHttpRequest ) XMLHttpRequest = function()
 {
@@ -213,12 +222,12 @@ function send_invite(){
 
 <div id="header" class="container_24">
         <div style="text-align: right;">
-<!--iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FInstaright-Firefox-addon-for-Instapaper%2F105396136190038&amp;layout=button_count&amp;show_faces=true&amp;width=450&amp;action=like&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:21px;" allowTransparency="true"></iframe-->
                 <ul> 
                         {% if user %}
                         <li>Hi {{ user }}</li>
+			<li><a href="{{ logout_url }}">Say byebye!</a></li>
                         {% else %}
-                        <li><a id="btn_login" href="{{ login_url }}" title="Login">introduce yourself</a></li>
+                        <li><a id="btn_login" href="/account" title="Login">introduce yourself</a></li>
                         {% endif %}
                         <li>
                         </li>
