--- a/backend/index.html
+++ b/backend/index.html
@@ -356,7 +356,7 @@ function send_invite(){
                         <div id="right_box_mid">
                                 <ul>
                                         <li class="social_media"><img align="left" src="/static/images/twitter.png" title="Instapaper tools on twitter"/><a href="http://twitter.com/instaright">Twitter</a></li>
-                                        <li class="social_media"><img align="left" src="/static/images/facebook.png" title="Instapaper tools on facebook"/><a href="http://www.facebook.com/pages/Instaright-Firefox-addon-for-Instapapaer/105396136190038">Facebook Page</a></li>
+                                        <li class="social_media"><img align="left" src="/static/images/facebook.png" title="Instapaper tools on facebook"/><a href="http://www.facebook.com/instaright">Facebook Page</a></li>
                                         <li class="social_media"><img align="left" src="/static/images/blog.png" title="Instapaper tools blog"/><a href="http://instaright.tumblr.com/">Blog</a></li>
                                         <li class="social_media"><img align="left" src="/static/images/arrow_right.png"/><a href="/tools/delicious" title="Import Delicious Bookmarks to Instapaper">Delicious Import to Instapaper</a></li>
                                 </ul>
